--- a/basics-2/gcloud/templates/contact_book.html
+++ b/basics-2/gcloud/templates/contact_book.html
@@ -1,5 +1,13 @@
 {% extends 'index.html' %}
 
 {% block body %}
+  <ul>
+    {% for contact in contacts %}
+      <li>
+        {{ contact.name }} <a href="/contacts/{{ contact.key.id() }}">Ver Más</a>
+      </li>
+    {% endfor %}
+  </ul>
+
   <a href="/add">Añadir contacto</a>
 {% endblock %}
